<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!--
         <ImageView android:id="@+id/imageView1" android:layout_width="wrap_content" 
		android:layout_height="wrap_content" android:src="@drawable/ic_launcher" 
		/>
    -->


    <!--  -->

    <TextView
        android:id="@string/alcool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alcool" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msgPromptAlcool"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@string/gasolina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gasolina" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msgPromptGasolina"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:background="#2a2a2a"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Calcular" />

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="Limpar"
            android:hint="Pressione para fazer novo cálculo"
            android:layout_weight="1"
            android:text="Limpar" />
    </LinearLayout>

    <TextView        
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="#FF0000" />

</LinearLayout>